sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: illegal start of simple expression
  for(k<-0 to n-1)) {
                  ^